# duong-cas-auth-api

./: AUTHORS  ChangeLog  README.md  docker-compose.yml  requirements.txt  setup.cfg  startup.py
casauth/: grpc.py  rpc.py  version.py
casauth/cmd/: __init__.py  api.py  common.py  manage.py  taskmanager.py
casauth/cmd/db/: init_data.py  init_sample_data.py
casauth/common/: base_wsgi.py  cfg.py  context.py  crypto_utils.py  data_utils.py  errors.py  exceptions.py  i18n.py  json.py  locale_utils.py  mail_utils.py  objects.py  pagination.py  rpc_utils.py  str_utils.py  stream_codecs.py  time_utils.py  wsgi.py
casauth/common/grpc/: credentials.py  service.py
casauth/common/rpc/: secure_serializer.py  serializer.py  service.py
casauth/db/: dto.py  models.py  query.py  types.py
casauth/db/sqlalchemy/: api.py  mappers.py  migration.py  session.py
casauth/taskmanager/: api.py
casauth/taskmanager/managers/: __init__.py  periodic_task.py  user.py
casauth/test/: grpc_client.py  rpc_test.py
casauth/wsgi/: __init__.py  config.py
casauth/wsgi/api/: __init__.py
casauth/wsgi/base/: context.py
casmail/: grpc.py  rpc.py  version.py
casmail/cmd/: common.py  taskmanager.py
casmail/common/: cfg.py  context.py  crypto_utils.py  exceptions.py  i18n.py  mail_util.py  rpc_utils.py  str_util.py
casmail/taskmanager/: api.py
casmail/templates/: compute_info.html  user_activation.html  user_reset_password.html  user_s3.html
etc/: cas.conf  log-formatter.conf
etc/credentials/: generate.sh
test/: grpc_client.py  rpc.py  rpc_client.py
(+30 files in other folders)
